@@ -4,8 +4,13 @@ void State::addState(Item::Vector const &kernel)
 {
     State &state = newState();
 
-    for_each(kernel.begin(), kernel.end(), 
-         FnWrap::unary(staticAddKernelItem, state));
+    for_each(
+        kernel.begin(), kernel.end(), 
+        [&](Item const &item)
+        {
+            state.addKernelItem(StateItem(item));
+        }
+    );
 }
 
 
